Fixed Footer Spacing/Alignment
Took out the footer nav for simplicity.
Changed the class of the “.footer .student-name” to
“.footer-student-name” to get rid of styling conflicts with
“.student-name” in the main styling section.

--- a/css/styles.css
+++ b/css/styles.css
@@ -143,7 +143,7 @@ FOOTER
 .footer .main-nav {
 	display: none;
 }
-.footer .student-name {
+.footer-student-name {
     font-size: 1em;
 	text-align: left;
 	float: left;
@@ -170,6 +170,7 @@ FOOTER
 	font-size: 1em;
 	float: right;
 	margin-right: 1em;
+    padding-bottom: 10px;
 }
 
 /*
@@ -215,16 +216,6 @@ Media Queries
 		padding-right: 30px;
 		padding-bottom: 10px;
 	}
-	#top {
-		display: none;
-	}
-
-	.footer	.main-nav {
-		display: inline-block;
-		float: right;
-		margin-right: 2em;
-		padding-bottom: 10px;
-	}
 
 	#skills li {
 		display: inline-block;
@@ -234,20 +225,12 @@ Media Queries
 	.contact p {
 		width: 80%;
 	}
-	.footer .student-name {
-		font-size: 1em;
-		margin-left: 2em;
-		padding-bottom: 10px;
-	}
 }
 
 @media (min-width: 1024px) {
 	.page-section {
 		width: 90%;
 		margin: 0 auto;
-	}
-	#top {
-		display: none;
 	}
 	.main-header {
 		padding: 20px 80px 0 80px;
@@ -266,7 +249,6 @@ Media Queries
 		  vertical-align: top;
 		  padding-left: 1em;
 		  padding-right: 1em;
-
 	}
 	.profile-img {
 		width: 30%;
@@ -274,8 +256,4 @@ Media Queries
 		margin-right: 2em;
 		padding-bottom: 10px;
 	}
-	.footer  {
-		padding: 0 40px;
-	}
-
 }
